# replace_landsurface

./: .gitignore  .pre-commit-config.yaml  COPYRIGHT.txt  README.md  ddd.toml  pyproject.toml  ruff.toml
.conda/: env_dev.yml  meta.yaml
.github/config/: deployment-sites.json  deployment-sites.schema.json
.github/workflows/: CD.yml  CI.yml  ci.yml
integration/: INTEGRATION_README.md  integration_tests.sh
src/: common_mule_operator.py  common_utilities.py  hres_eccb.py  hres_ic.py  replace_landsurface_with_BARRA2R_IC.py  replace_landsurface_with_ERA5land_IC.py  replace_landsurface_with_FF_IC.py  replace_landsurface_with_barra_ic.py  replace_landsurface_with_eraland_ic.py  replace_landsurface_with_ff_ic.py  replace_landsurface_with_hres.py
src/replace_landsurface/: __init__.py  hres_eccb.py  hres_ic.py  replace_landsurface.py  replace_landsurface_with_BARRA2R_IC.py  replace_landsurface_with_ERA5land_IC.py  replace_landsurface_with_FF_IC.py
src/replace_landsurface.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_hres.py  test_replace_landsurface_with_era5land.py
tests/integration/: test_integration.py
