[project]
name = "replace-landsurface"
authors = [
  {name = "Chermelle Engel", email="chermelle.engel@anu.edu.au"},
  {name = "Davide Marchegiani", email="davide.marchegiani@anu.edu.au"},
  {name = "Paul Leopardi", email="paul.leopardi@anu.edu.au"},
]
maintainers = [
    { name = "ACCESS-NRI", email = "access.nri@anu.edu.au" }
]
description = "Package to replace specific land surface fields to be used within ACCESS-RAM suites."
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["ACCESS-RAM", "Regional Nesting Suite", "Replace Land Surface"]
dynamic = ["version"]
dependencies = [
    "python >=3.10,<=3.12",
    "mule",
    "numpy ==1.23.4", # https://stackoverflow.com/a/75148219/21024780
    "scitools-iris",
    "xarray",
    "versioneer",
]

[project.urls]
Repository = "https://github.com/ACCESS-NRI/replace_landsurface"

[project.scripts]
replace_landsurface = "replace_landsurface.replace_landsurface:main"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>64", 
    "versioneer[toml]"
]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "src/replace_landsurface/_version.py"
versionfile_build = "replace_landsurface/_version.py"
tag_prefix = ""
parentdir_prefix = "replace-landsurface-"